<?xml version="1.0"?>
<package format="2">
  <name>orb3_frontend_bridge</name>
  <version>0.0.1</version>
  <description>ORB-SLAM3 bridge node</description>

  <maintainer email="m.neelakantan@gmail.com"> Pranav M </maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Build-time dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Run-time dependencies -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

